# qt_basic

./: .gitignore  README.md  pyproject.toml
src/app/: __init__.py  main.py
src/app/data/: __init__.py  http_demo.py  json_demo.py  sqlite_demo.py  threading_demo.py
src/app/shell/: __init__.py  main_window.py
src/app/snippets/: README.md  data_http_get.py  data_sqlite_repo.py  thread_worker.py  ui_form_submit.py
src/app/ui/: __init__.py  advanced_views.py  basic_widgets.py  interaction_widgets.py
tests/: test_json_roundtrip.py  test_sqlite_crud.py
