[project]
name = "pyside6-uv-snippets"
version = "0.1.0"
description = "PySide6 client demo snippets managed by uv"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "PySide6>=6.8.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
]

[project.scripts]
qt-snippets = "app.main:run"

[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.pytest.ini_options]
pythonpath = ["src"]
